# WeaviateCloud

./: .env.example  .gitignore  README.md  avail_modules.py  basic_modules_demo.py  client_api_demo.py  collections_demo.py  experiment.py  explore_modules.py  faq_semantic_bot.py  jfk_semantic_bot.py  main.py  modules_info.py  openai_modules_demo.py  openai_modules_demo_fixed.py  pyproject.toml  query_demo.py  setup.sh  simple_experiment.py  simple_openai_demo.py
